--- a/Matrix_Algebra/ANS_Matrix_Algebra.ipynb
+++ b/Matrix_Algebra/ANS_Matrix_Algebra.ipynb
@@ -486,12 +486,16 @@
     "$$\n",
     "$$\n",
     "\\begin{equation}\n",
-    "A - 2B = \\begin{bmatrix} 1 & 2 \\\\ 3 & 4 \\end{bmatrix} \n",
+    "A - 2B = \n",
+    "\\end{equation}\n",
+    "$$\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "\\begin{bmatrix} 1 & 2 \\\\ 3 & 4 \\end{bmatrix} \n",
     "- \n",
     "2 \\begin{bmatrix} -1 & 0 \\\\ 1 & 1 \\end{bmatrix} =>\n",
     "\\end{equation}\n",
     "$$\n",
-    "\n",
     "$$\n",
     "\\begin{equation}\n",
     "\\begin{bmatrix} 1 & 2 \\\\ 3 & 4 \\end{bmatrix}\n",
