--- a/Systems_Linear_Equation/ANS_System_of_Linear_Equations.ipynb
+++ b/Systems_Linear_Equation/ANS_System_of_Linear_Equations.ipynb
@@ -754,12 +754,13 @@
     "\\xrightarrow{\\text{R}_{1} \\leftrightarrow \\text{R}_{2}}\n",
     "$$\n",
     "$$\n",
+    "\\begin{equation}\n",
     "\\begin{pmatrix}\n",
     "    1 & 0 & 1 &\\bigm| & 0 \\\\\n",
     "    0 & 1 & -2 &\\bigm| & -1 \\\\\n",
     "    0 & 0 & 1 &\\bigm| & \\frac{2}{3} \\\\\n",
     "\\end{pmatrix}\n",
-    "\n",
+    "\\end{equation}\n",
     "$$\n",
     "<br><br>\n",
     "\n",
@@ -1150,7 +1151,6 @@
     "-x_1+2x_2+x_3=0 \\\\\n",
     "2x_1+4x_2+6x_3=0 \\\\\n",
     "\\end{equation}\n",
-    "<br>\n",
     "$\n",
     "<br><br>\n",
     "$\n",
@@ -1231,7 +1231,7 @@
    "id": "77eca332",
    "metadata": {},
    "source": [
-    "$x_3$ can take any real value, and $x_1$ and $x_2$ are dependent on $x_3$. $x_3 \\forall \\text{t} \\in \\mathbb{R} $ \n",
+    "$x_3$ can take any real value, and $x_1$ and $x_2$ are dependent on $x_3$. $x_3$ $\\forall \\text{t} \\in \\mathbb{R}$\n",
     "<br>\n",
     "$\n",
     "\\begin{equation}\n",
@@ -2089,8 +2089,6 @@
     "1 & 0 & 0 & 1\\\\\n",
     "\\end{pmatrix}\n",
     "\\xrightarrow{\\text{R}_{3} + \\text{R}_{2}}\n",
-    "\\end{equation}\n",
-    "\\begin{equation}\n",
     "\\begin{pmatrix}\n",
     "1 & -1 & 1 & 0 \\\\\n",
     "0 & 1 & 1 & 0 \\\\\n",
