--- a/Matrix_Algebra/ANS_Matrix_Algebra.ipynb
+++ b/Matrix_Algebra/ANS_Matrix_Algebra.ipynb
@@ -489,13 +489,12 @@
     "A - 2B = \n",
     "\\end{equation}\n",
     "$\n",
-    "$$\n",
+    "$\n",
     "\\begin{equation}\n",
-    "\\begin{bmatrix} 1 & 2 \\\\ 3 & 4 \\end{bmatrix} \n",
-    "- \n",
+    "\\begin{bmatrix} 1 & 2 \\\\ 3 & 4 \\end{bmatrix} - \n",
     "2 \\begin{bmatrix} -1 & 0 \\\\ 1 & 1 \\end{bmatrix} =>\n",
     "\\end{equation}\n",
-    "$$\n",
+    "$\n",
     "$$\n",
     "\\begin{equation}\n",
     "\\begin{bmatrix} 1 & 2 \\\\ 3 & 4 \\end{bmatrix}\n",
