--- a/Linear_Transformations/ANS_Linear_Transformations.ipynb
+++ b/Linear_Transformations/ANS_Linear_Transformations.ipynb
@@ -37,18 +37,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def mat_det(A):\n",
-    "    assert len(A) == 0 or all(type(row) == list for row in A) and len(A) == len(A[0]), \"A should be a square matrix.\"\n",
+    "def calc_det(matrix):\n",
+    "    assert len(matrix) == 0 or all(isinstance(row, list) for row in matrix) and len(matrix) == len(matrix[0]), \"Matrix should be a square matrix.\"\n",
     "    \n",
-    "    n = len(A)\n",
-    "    if   n == 0: return 1.\n",
-    "    elif n == 1: return A[0][0]\n",
-    "    elif n == 2: return A[0][0] * A[1][1] - A[0][1] * A[1][0] \n",
+    "    size = len(matrix)\n",
+    "    \n",
+    "    if size == 0:\n",
+    "        return 1.0\n",
+    "    elif size == 1:\n",
+    "        return matrix[0][0]\n",
+    "    elif size == 2:\n",
+    "        return matrix[0][0] * matrix[1][1] - matrix[0][1] * matrix[1][0] \n",
     "\n",
-    "    det = 0.\n",
-    "    for col, cofactor in enumerate(A[0]):\n",
-    "        minor = [[A[i][j] for j in range(n) if j != col] for i in range(1, n)]\n",
-    "        det += (-1) ** col * cofactor * mat_det(minor)\n",
+    "    det = 0.0\n",
+    "    for col, cofactor in enumerate(matrix[0]):\n",
+    "        submatrix = [[matrix[i][j] for j in range(size) if j != col] for i in range(1, size)]\n",
+    "        det += (-1) ** col * cofactor * calc_det(submatrix)\n",
     "\n",
     "    return det"
    ]
@@ -66,25 +70,28 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def mat_eig(A, max_iterations = 50000):\n",
-    "    assert len(A) == 0 or all(type(row) == list for row in A) and len(A) == len(A[0]), \"A should be a square matrix.\"\n",
+    "def mat_eig(matrix, max_iterations=50000):\n",
+    "    assert len(matrix) == 0 or all(isinstance(row, list) for row in matrix) and len(matrix) == len(matrix[0]), \"Matrix should be a square matrix.\"\n",
     "\n",
-    "    n = len(A) \n",
-    "    if n == 0: return [], []\n",
-    "    if n == 1: return [A[0][0]], [[1.]]\n",
+    "    size = len(matrix)\n",
+    "    \n",
+    "    if size == 0:\n",
+    "        return [], []\n",
+    "    if size == 1:\n",
+    "        return [matrix[0][0]], [[1.]]\n",
     "\n",
     "    eigenvectors = []\n",
     "    eigenvalues = []\n",
     "\n",
-    "    for _ in range(n):\n",
-    "        # Generate random guess for eigenvector with ||eigvec|| = 1\n",
-    "        eigvec = [random.random() for _ in range(n)]\n",
+    "    for _ in range(size):\n",
+    "        # Generate a random guess for the eigenvector with ||eigvec|| = 1\n",
+    "        eigvec = [random.random() for _ in range(size)]\n",
     "        norm_eigvec = sum(a ** 2 for a in eigvec) ** 0.5\n",
     "        eigvec = [a / norm_eigvec for a in eigvec]\n",
     "\n",
     "        # Power Method\n",
     "        for _ in range(max_iterations):\n",
-    "            tf_eigvec = [sum(a * b for a, b in zip(row, eigvec)) for row in A]\n",
+    "            tf_eigvec = [sum(a * b for a, b in zip(row, eigvec)) for row in matrix]\n",
     "            \n",
     "            norm_tf = sum(a ** 2 for a in tf_eigvec) ** 0.5\n",
     "            eigvec = [a / norm_tf for a in tf_eigvec]\n",
@@ -95,7 +102,7 @@
     "\n",
     "        # Deflate Matrix with Weilandt deflation\n",
     "        eigenval_outer_product = [[a * b for b in eigvec] for a in tf_eigvec]\n",
-    "        A = [[A[i][j] - eigenval_outer_product[i][j] for j in range(n)] for i in range(n)]\n",
+    "        matrix = [[matrix[i][j] - eigenval_outer_product[i][j] for j in range(size)] for i in range(size)]\n",
     "\n",
     "    return eigenvalues, [list(row) for row in zip(*eigenvectors)]"
    ]
@@ -117,14 +124,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-- A --\n",
+      "-- Matrix --\n",
       "[[3.59579087 0.52234343 0.53467009 0.79377282 2.10952058 1.35392133\n",
       "  4.97209715 1.32656723]\n",
       " [4.47441808 3.08122318 2.9305966  4.73423241 0.54526223 3.43746025\n",
@@ -142,10 +149,10 @@
       " [4.67181398 1.10693994 4.34093421 2.0215506  0.8909471  2.6789444\n",
       "  1.49469963 1.44452728]]\n",
       "\n",
-      "-- My det(A) --\n",
+      "-- My Matrix Determinant --\n",
       "6415.088508069304\n",
       "\n",
-      "-- Numpy det(A) --\n",
+      "-- Numpy Matrix Determinant --\n",
       "6415.088508069305\n",
       "\n",
       "Are my results equal to numpy? Yes.\n"
@@ -153,14 +160,17 @@
     }
    ],
    "source": [
-    "A = np.random.random((8, 8)).astype(\"float64\") * 5\n",
+    "# Generate a random 8x8 matrix\n",
+    "random_matrix = np.random.random((8, 8)).astype(\"float64\") * 5\n",
     "\n",
-    "my_result = mat_det(A.tolist())\n",
-    "np_result = np.linalg.det(A)\n",
+    "# Calculate determinants\n",
+    "my_result = calc_det(random_matrix.tolist())\n",
+    "np_result = np.linalg.det(random_matrix)\n",
     "\n",
-    "print(\"-- A --\", A, sep=\"\\n\")\n",
-    "print(\"\\n-- My det(A) --\", my_result, sep=\"\\n\")\n",
-    "print(\"\\n-- Numpy det(A) --\", np_result, sep=\"\\n\")\n",
+    "# Display results\n",
+    "print(\"-- Matrix --\", random_matrix, sep=\"\\n\")\n",
+    "print(\"\\n-- My Matrix Determinant --\", my_result, sep=\"\\n\")\n",
+    "print(\"\\n-- Numpy Matrix Determinant --\", np_result, sep=\"\\n\")\n",
     "print(\"\\nAre my results equal to numpy?\", \"Yes.\" if np.isclose(my_result, np_result) else \"No.\")"
    ]
   },
@@ -175,14 +185,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-- A --\n",
+      "-- Matrix --\n",
       "[[4.15989526 0.50810703 1.0431367 ]\n",
       " [4.08027029 1.64667948 0.72658524]\n",
       " [1.88339571 2.18610126 4.67200778]]\n",
@@ -199,7 +209,6 @@
       " [-0.43365206  0.65719782  0.79094366]\n",
       " [-0.80582047 -0.7241378  -0.60555319]]\n",
       "\n",
-      "\n",
       " Are the differences of eigenvalues close? Yes.\n",
       "\n",
       "-- Cosine Similarity of Eigenvectors --\n",
@@ -208,21 +217,29 @@
     }
    ],
    "source": [
-    "A = np.random.random((3, 3)).astype(\"float64\") * 5\n",
+    "# Generate a random 3x3 matrix\n",
+    "random_matrix = np.random.random((3, 3)).astype(\"float64\") * 5\n",
     "\n",
-    "np_ev, np_evl = np.linalg.eig(A)\n",
-    "m_ev, m_evl = mat_eig(A.tolist())\n",
-    "m_ev, m_evl = np.array(m_ev), np.array(m_evl)\n",
+    "# Calculate eigenvalue and eigenvector\n",
+    "np_evector, np_evalue = np.linalg.eig(random_matrix)\n",
+    "my_evector, m_evalue = mat_eig(random_matrix.tolist())\n",
+    "my_evector, m_evalue = np.array(my_evector), np.array(m_evalue)\n",
     "\n",
-    "print(\"-- A --\", A, sep=\"\\n\")\n",
-    "print(\"\\n-- My Eigenvalues and Eigenvectors --\", m_ev, m_evl, sep=\"\\n\")\n",
-    "print(\"\\n-- Numpy Eigenvalues and Eigenvectors --\", np_ev, np_evl, sep=\"\\n\")\n",
+    "print(\"-- Matrix --\", random_matrix, sep=\"\\n\")\n",
+    "print(\"\\n-- My Eigenvalues and Eigenvectors --\", my_evector, m_evalue, sep=\"\\n\")\n",
+    "print(\"\\n-- Numpy Eigenvalues and Eigenvectors --\", np_evector, np_evalue, sep=\"\\n\")\n",
     "\n",
-    "print(\"\\n\\n\", \"Are the differences of eigenvalues close?\", \"Yes.\" if np.allclose(m_ev, np_ev) else \"No.\")\n",
+    "print(\"\\n\\n\", \"Are the differences of eigenvalues close?\", \"Yes.\" if np.allclose(my_evector, np_evector) else \"No.\")\n",
     "\n",
-    "cosine_similarity = np.array([npe.dot(me) / (np.linalg.norm(me) * np.linalg.norm(npe)) for npe, me in zip(np_evl.T, m_evl.T)]).T\n",
-    "print(\"\\n-- Cosine Similarity of Eigenvectors --\", cosine_similarity, sep=\"\\n\")"
+    "cosine_similarity = np.array([npe.dot(me) / (np.linalg.norm(me) * np.linalg.norm(npe)) for npe, me in zip(np_evalue.T, m_evalue.T)]).T"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -241,7 +258,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.1"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
