--- a/Matrix_Algebra/ANS_Matrix_Algebra.ipynb
+++ b/Matrix_Algebra/ANS_Matrix_Algebra.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "261e2b4b-849d-40f4-bb3f-f95ddffb9cc7",
    "metadata": {},
    "outputs": [
@@ -31,6 +31,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Result:\n",
+      "\n",
       "[[2, 4, 6], [8, 10, 12], [14, 0, 18]]\n"
      ]
     }
@@ -52,8 +54,7 @@
     "        if not colsA or not colsB:\n",
     "            print(\"Please enter a valid matrix.\")\n",
     "            return False\n",
-    "        \n",
-    "    # Checking if the matrices have the same dimensions\n",
+    "\n",
     "    if rowsA != rowsB or colsA != colsB:\n",
     "        print(\"Matrices must have the same no. of columns and rows for addition.\")\n",
     "        return False\n",
@@ -68,54 +69,54 @@
     "        \n",
     "    rowsA = len(A)\n",
     "    colsA = len(A[0])\n",
-    "    sum_matrix = [[0 for _ in range(colsA)] for _ in range(rowsA)]\n",
+    "    sum_mat = [[0 for _ in range(colsA)] for _ in range(rowsA)]\n",
     "\n",
     "    for i in range(rowsA):\n",
     "        for j in range(colsA):\n",
-    "            sum_matrix[i][j] = A[i][j] + B[i][j] # matrix addition\n",
+    "            sum_mat[i][j] = A[i][j] + B[i][j]\n",
     "\n",
-    "    return sum_matrix\n",
+    "    return sum_mat\n",
     "\n",
-    "matrix_a = np.array([\n",
+    "mat_a = np.array([\n",
     "    [1, 2, 3],\n",
     "    [4, 5, 6],\n",
     "    [7, 0, 9]\n",
     "])\n",
     "\n",
-    "matrix_b = np.array([\n",
+    "mat_b = np.array([\n",
     "    [9, 8, 7],\n",
     "    [6, 5, 4],\n",
     "    [3, 2, 1]\n",
     "])\n",
     "\n",
-    "matrix_c = [\n",
+    "mat_c = [\n",
     "    [1, 3, 3],\n",
     "    [4, 5, 2],\n",
     "    [1, 8, 9],\n",
     "    [0, 0, 3]\n",
     "]\n",
     "\n",
-    "matrix_d = np.array([\n",
+    "mat_d = np.array([\n",
     "    [9, 8, 7, 4],\n",
     "    [6, 5, 4, 1],\n",
     "    [3, 23, 4, 2]\n",
     "])\n",
     "\n",
-    "matrix_e = np.array([\n",
+    "mat_e = np.array([\n",
     "    [9, 8, 7],\n",
     "    [6, 5, 4],\n",
     "    [3, 23, 4],\n",
     "    [1, 0, 11]\n",
     "])\n",
     "\n",
-    "matrix_f = []\n",
-    "matrix_g = [[]]\n",
-    "matrix_h = np.array([])\n",
-    "matrix_i = np.array([[]])\n",
-    "matrix_j = np.array([[[]]])\n",
+    "mat_f = []\n",
+    "mat_g = [[]]\n",
+    "mat_h = np.array([])\n",
+    "mat_i = np.array([[]])\n",
+    "mat_j = np.array([[[]]])\n",
     "\n",
-    "print(mat_add(matrix_a, matrix_a))\n",
-    "\n"
+    "print(f\"Result:\\n\")\n",
+    "print(mat_add(mat_a, mat_a))\n"
    ]
   },
   {
@@ -128,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "83c8c26a-42d2-43c9-9979-a5552381540f",
    "metadata": {},
    "outputs": [
@@ -136,6 +137,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Result:\n",
+      "\n",
       "[[36, 92, 31, 13], [72, 103, 56, 25], [84, 255, 75, 30], [9, 69, 12, 6]]\n"
      ]
     }
@@ -163,32 +166,33 @@
     "\n",
     "    return result\n",
     "\n",
-    "matrix_a = np.array([\n",
+    "mat_a = np.array([\n",
     "    [1, 2, 3],\n",
     "    [4, 5, 6],\n",
     "    [7, 8, 9]\n",
     "])\n",
     "\n",
-    "matrix_b = np.array([\n",
+    "mat_b = np.array([\n",
     "    [9, 8, 7],\n",
     "    [6, 5, 4],\n",
     "    [3, 2, 1]\n",
     "])\n",
     "\n",
-    "matrix_c = [\n",
+    "mat_c = [\n",
     "    [1, 3, 3],\n",
     "    [4, 5, 2],\n",
     "    [1, 8, 9],\n",
     "    [0, 0, 3]\n",
     "]\n",
     "\n",
-    "matrix_d = np.array([\n",
+    "mat_d = np.array([\n",
     "    [9, 8, 7, 4],\n",
     "    [6, 5, 4, 1],\n",
     "    [3, 23, 4, 2]\n",
     "])\n",
     "\n",
-    "print(mat_multi(matrix_c, matrix_d))\n"
+    "print(f\"Result:\\n\")\n",
+    "print(mat_multi(mat_c, mat_d))\n"
    ]
   },
   {
@@ -201,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "dced9504-61ba-417b-a936-68dcba70f3f8",
    "metadata": {},
    "outputs": [
@@ -209,7 +213,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Result:\n",
+      "\n",
       "k(A+B) = [[20, 22, 20], [20, 20, 12], [8, 62, 26], [2, 0, 28]]\n",
+      "\n",
       "kA+kB = [[20, 22, 20], [20, 20, 12], [8, 62, 26], [2, 0, 28]]\n"
      ]
     }
@@ -229,10 +236,10 @@
     "    return result\n",
     "\n",
     "def addMulti(A, B, k):\n",
-    "    sum_matrix = mat_add(A, B) # function already defined above\n",
-    "    if not sum_matrix:\n",
+    "    sum_mat = mat_add(A, B) # function already defined above\n",
+    "    if not sum_mat:\n",
     "        return False\n",
-    "    product_matrix = scalar_multi(sum_matrix, k) # function already defined above\n",
+    "    product_matrix = scalar_multi(sum_mat, k) # function already defined above\n",
     "\n",
     "    return product_matrix\n",
     "    \n",
@@ -243,48 +250,49 @@
     "\n",
     "    return sum_matrix\n",
     "\n",
-    "matrix_a = np.array([\n",
+    "mat_a = np.array([\n",
     "    [1, 2, 3],\n",
     "    [4, 5, 6],\n",
     "    [7, 8, 9]\n",
     "])\n",
     "\n",
-    "matrix_b = np.array([\n",
+    "mat_b = np.array([\n",
     "    [9, 8, 7],\n",
     "    [6, 5, 4],\n",
     "    [3, 2, 1]\n",
     "])\n",
     "\n",
-    "matrix_c = [\n",
+    "mat_c = [\n",
     "    [1, 3, 3],\n",
     "    [4, 5, 2],\n",
     "    [1, 8, 9],\n",
     "    [0, 0, 3]\n",
     "]\n",
     "\n",
-    "matrix_d = np.array([\n",
+    "mat_d = np.array([\n",
     "    [9, 8, 7, 4],\n",
     "    [6, 5, 4, 1],\n",
     "    [3, 23, 4, 2]\n",
     "])\n",
     "\n",
-    "matrix_e = np.array([\n",
+    "mat_e = np.array([\n",
     "    [9, 8, 7],\n",
     "    [6, 5, 4],\n",
     "    [3, 23, 4],\n",
     "    [1, 0, 11]\n",
     "])\n",
     "\n",
-    "matrix_f = []\n",
-    "matrix_g = [[]]\n",
-    "matrix_h = np.array([])\n",
-    "matrix_i = np.array([[]])\n",
-    "matrix_j = np.array([[[]]])\n",
+    "mat_f = []\n",
+    "mat_g = [[]]\n",
+    "mat_h = np.array([])\n",
+    "mat_i = np.array([[]])\n",
+    "mat_j = np.array([[[]]])\n",
     "\n",
     "k = 2\n",
-    "print(f\"k(A+B) = {addMulti(matrix_c, matrix_e, k)}\")\n",
-    "print(f\"kA+kB = {multiAdd(matrix_c, matrix_e, k)}\")\n",
-    "\n"
+    "\n",
+    "print(f\"Result:\\n\")\n",
+    "print(f\"k(A+B) = {addMulti(mat_c, mat_e, k)}\\n\")\n",
+    "print(f\"kA+kB = {multiAdd(mat_c, mat_e, k)}\")"
    ]
   },
   {
@@ -297,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 2,
    "id": "175183d2-dc48-4da3-9431-d798077e4a90",
    "metadata": {},
    "outputs": [
@@ -305,6 +313,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Result:\n",
+      "\n",
       "[1, 5, 9]\n"
      ]
     }
@@ -320,39 +330,40 @@
     "    \n",
     "    return diagonal\n",
     "\n",
-    "matrix_a = np.array([\n",
+    "mat_a = np.array([\n",
     "    [1, 2, 3],\n",
     "    [4, 5, 6],\n",
     "    [7, 8, 9]\n",
     "])\n",
     "\n",
-    "matrix_b = np.array([\n",
+    "mat_b = np.array([\n",
     "    [9, 8, 7],\n",
     "    [6, 5, 4],\n",
     "    [3, 2, 1]\n",
     "])\n",
     "\n",
-    "matrix_c = [\n",
+    "mat_c = [\n",
     "    [1, 3, 3],\n",
     "    [4, 5, 2],\n",
     "    [1, 8, 9],\n",
     "    [0, 0, 3]\n",
     "]\n",
     "\n",
-    "matrix_d = np.array([\n",
+    "mat_d = np.array([\n",
     "    [9, 8, 7, 4],\n",
     "    [6, 5, 4, 1],\n",
     "    [3, 23, 4, 2]\n",
     "])\n",
     "\n",
-    "matrix_e = np.array([\n",
+    "mat_e = np.array([\n",
     "    [9, 8, 7],\n",
     "    [6, 5, 4],\n",
     "    [3, 23, 4],\n",
     "    [1, 0, 11]\n",
     "])\n",
     "\n",
-    "print(matrix_dia(matrix_a))\n"
+    "print(f\"Result:\\n\")\n",
+    "print(mat_dia(mat_a))"
    ]
   },
   {
@@ -365,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "f39dfa2b-f6ac-4951-b5ab-11fe90fdacd0",
    "metadata": {},
    "outputs": [
@@ -373,7 +384,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15\n"
+      "Result: 15\n"
      ]
     }
    ],
@@ -509,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "ca3ba82d-8d23-42ba-b522-c843652f3ffe",
    "metadata": {},
    "outputs": [
@@ -517,7 +528,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X =\n",
+      "Result: \n",
       "[[1.         0.66666667]\n",
       " [0.33333333 0.66666667]]\n"
      ]
@@ -531,14 +542,14 @@
     "B = np.array([[-1, 0], [1, 1]])\n",
     "\n",
     "# Compute A - 2B\n",
-    "result = A - 2 * B\n",
+    "res = A - 2 * B\n",
     "\n",
     "# Divide the result by 3 to get X\n",
-    "x = result/ 3\n",
+    "result = res / 3\n",
     "\n",
     "# Print the result\n",
-    "print(\"X =\")\n",
-    "print(x)\n"
+    "print(\"Result: \")\n",
+    "print(result)\n"
    ]
   },
   {
@@ -633,7 +644,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X =\n",
+      "Result: \n",
       "[[-1 -4]\n",
       " [-7 -9]]\n"
      ]
@@ -647,11 +658,11 @@
     "B = np.array([[-1, 0], [1, 1]])\n",
     "\n",
     "# Calculate X as described in the equation\n",
-    "X = 2 * B - 2 * A - 3 * B\n",
+    "res = 2 * B - 2 * A - 3 * B\n",
     "\n",
     "# Print the result\n",
-    "print(\"X =\")\n",
-    "print(X)"
+    "print(\"Result: \")\n",
+    "print(res)"
    ]
   },
   {
